@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - Support for async calls
 
 0.004     2015-11-07 15:03:25+11:00 Australia/Melbourne
  - Fix accessor defaults (Moo requires them to be coderefs)
